Width, margin and align corrected in 'tech-box-list' style

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,7 +10,9 @@
 }
 
 .main {
-  align-content: center;
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
   grid-row: 2;
   padding: 20px;
 }
